--- a/email-git-login/src/app.css
+++ b/email-git-login/src/app.css
@@ -1,9 +1,9 @@
 
 .body {
     display: flex;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
+    /* justify-content: center; */
+    width: 100vw;
+    height: 100vh;
     align-items: center;
     flex-direction: column;
 }
