--- a/email-git-login/src/index.css
+++ b/email-git-login/src/index.css
@@ -16,9 +16,10 @@ time, mark, audio, video {
     margin: 0;
     padding: 0;
     border: 0;
+    font-family: 'Sintony', sans-serif;
     font-size: 16px;
     font-weight:normal;
-    font-style: italic;
+    /* font-style: italic; */
     font-display: swap;
     /* font: inherit; */
     vertical-align: baseline;
