--- a/email-git-login/src/header.css
+++ b/email-git-login/src/header.css
@@ -1,6 +1,6 @@
 
 .header-container{
-    height: 10%;
+    height: 21%;
     width: 100%;
     background-color: #2F3554;
     position: sticky;
@@ -9,16 +9,17 @@
 .header-contents{
     display: flex;
     align-items: center;
-    height: 100%;
+    height: 60%;
     width: 100%;
     /* justify-content: space-around; */
 }
+
 
 .header-title{
    
     font-size: 3rem;
     color: white;
-    font-weight: bold;
+    font-weight: 600;
     font-family: 'Inter', sans-seriff;
     padding-left: 2.5%;
 }
@@ -27,4 +28,35 @@
     color: white;
     font-family: 'Inter', sans-seriff;
     font-style: italic;
+}
+
+.header-nav{
+    width: 100%;
+    height: 40%;
+    background-color: #1A1D2E;;
+
+}
+
+.nav-contents{
+    width: 30%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.nav-links{
+    color: white;
+    font-family: 'Inter', sans-serif; 
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-top: 15px;
+    text-decoration: none;
+    height: 50px;
+    text-align: center;
+    border-radius: 5px;
+    font-size: 1.2rem;
+}
+
+.nav-links:hover{
+    background-color: rgba(255,255,255,.1) ;
 }
