--- a/email-git-login/src/emailgitform.css
+++ b/email-git-login/src/emailgitform.css
@@ -1,7 +1,8 @@
 .form-container{
-    height:50%;
+    height:79%;
     width: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
