--- a/email-git-login/src/header.css
+++ b/email-git-login/src/header.css
@@ -17,7 +17,7 @@
 
 .header-title{
    
-    font-size: 3rem;
+    font-size: 2.5rem;
     color: white;
     font-weight: 600;
     font-family: 'Inter', sans-seriff;
@@ -31,19 +31,23 @@
 }
 
 .header-nav{
-    width: 100%;
+    /* width: 100%; */
     height: 40%;
+    padding-left: 30px;
     background-color: #1A1D2E;;
 
 }
 
 .nav-contents{
-    width: 30%;
+    width: 500px;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: space-around;
+    min-width: 400px;
 }
+
+
 .nav-links{
     color: white;
     font-family: 'Inter', sans-serif; 
@@ -55,6 +59,7 @@
     text-align: center;
     border-radius: 5px;
     font-size: 1.2rem;
+    font-weight: 500;
 }
 
 .nav-links:hover{
