--- a/email-git-login/src/index.css
+++ b/email-git-login/src/index.css
@@ -23,6 +23,7 @@ time, mark, audio, video {
     font-display: swap;
     /* font: inherit; */
     vertical-align: baseline;
+    /* background-color: rgba(255,255,255,.8); */
 }
 
 
