--- a/email-git-login/src/emailcheck.css
+++ b/email-git-login/src/emailcheck.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 400px;
+    width: 50%;
     
     /* padding-top: 30%; */
     align-items: center;
@@ -12,7 +12,8 @@
 .email-git-text{
     background-color: rgba(255,255,255,.5);
     
-    width: 330px;
+    /* width: calc(330 / 400 * 100%); */
+    width: 82%;
     border-radius: 3px;
     border: 2px solid grey;
     font-size: 1.125rem;
