--- a/email-git-login/src/emailgitform.css
+++ b/email-git-login/src/emailgitform.css
@@ -1,8 +1,32 @@
 .form-container{
     height:79%;
-    width: 50%;
+    width: 40%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-bottom: 5%;
+    background-color: rgba(255,255,255,.9);
+    margin-top: 5%;
+}
+
+.instructions{
+    padding-bottom: 25px;
+    font-size: 1.15rem;
+
+}
+
+.form-button{
+    padding: 15px;
+    width: 25%;
+    background-color: #2F3554;
+    color: white;
+    font-family: 'Inter', sans-seriff;
+    font-weight: 600;
+    border-radius: 3px;
+}
+
+.form-button:disabled{
+    background-color: #2F3554;
+    opacity: .5;
 }
