--- a/email-git-login/src/header.css
+++ b/email-git-login/src/header.css
@@ -53,13 +53,16 @@
     font-family: 'Inter', sans-serif; 
     padding-left: 24px;
     padding-right: 24px;
-    padding-top: 15px;
+    padding-top: 12px;
+   
     text-decoration: none;
-    height: 50px;
+    height: 45px;
     text-align: center;
     border-radius: 5px;
     font-size: 1.2rem;
     font-weight: 500;
+    display: flex;
+
 }
 
 .nav-links:hover{
