--- a/email-git-login/src/emailcheck.css
+++ b/email-git-login/src/emailcheck.css
@@ -33,6 +33,9 @@
 }
 .email-check-frame{
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 .email-check-text{
     display: flex;
@@ -43,10 +46,14 @@
     font-weight: bold;
 }
 .valid-email-text{
-    /* width: 70%; */
+    display: flex;
+    flex-direction: column;
+    width: 100%;
 }
 .email-icon{
     /* margin-right: 10px; */
+    margin-right: 20px;
+    width: 16px;
 }
 .x-icon {
     color: red;
