--- a/email-git-login/src/header.css
+++ b/email-git-login/src/header.css
@@ -4,6 +4,7 @@
     width: 100%;
     background-color: #2F3554;
     position: sticky;
+    min-height: 142px;
 }
 
 .header-contents{
@@ -58,7 +59,7 @@
     text-decoration: none;
     height: 45px;
     text-align: center;
-    border-radius: 5px;
+    border-radius: 10px;
     font-size: 1.2rem;
     font-weight: 500;
     display: flex;
